--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 
 <body>
     <nav class="cabecalho_menu">
-        <a href="index.html">Início |</a>
-        <a href="paginas/pagina2.html">Página 2 |</a>
-        <a href="paginas/pagina3.html">Página 3 |</a>
-        <a href="paginas/pagina4.html">Página 4 |</a>
-        <a href="paginas/pagina5.html">Página 5 |</a>
-        <a href="paginas/pagina6.html">Página 6 </a>
+        <a href="index.html"><button type="button" class="button">Home</button></a>
+        <a href="paginas/missoes.html"><button type="button" class="button">Missões</button></a>
+        <a href="paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
+        <a href="paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
+        <a href="paginas/opcoes.html"><button type="button" class="button">Opções</button></a>
+        <a href="paginas/creditos.html"><button type="button" class="button">Créditos</button></a>
     </nav>
     <div class="conteudo">
+        <!-- construçoes -->
         <div class="conteudo_construcoes">
             <div class="conteudo_construcoes_titulo">
                 <div class="conteudo_construcoes_titulo_imagem">
                     <img src="./imagens/img.png" alt="img" title="img"
-                        class="conteudo_construcoes_titulo_imagem_imagem">
+                        class="imagem">
                 </div>
                 <div class="conteudo_construcoes_titulo_texto">
                     <h2>Construções</h2>
@@ -34,7 +35,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 1</p>
@@ -43,7 +44,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 2</p>
@@ -52,7 +53,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 3</p>
@@ -61,7 +62,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 4</p>
@@ -70,7 +71,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 5</p>
@@ -79,7 +80,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 6</p>
@@ -88,7 +89,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 7</p>
@@ -97,7 +98,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 8</p>
@@ -106,7 +107,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 9</p>
@@ -115,7 +116,7 @@
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img"
-                            class="conteudo_construcoes_elementos_elemento_imagem_imagem">
+                        class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 10</p>
@@ -123,24 +124,116 @@
                 </div>
             </div>
         </div>
+        <!-- Elemento Principal -->
         <div class="conteudo_objPrincipal">
             <h1>Elemento Principal</h1>
-        </div>
-        <div class="conteudo_melhorias">
-            <h2>Melhorias</h2>
-            <div class="conteudo_melhorias_elementos">
-                <p>elemento 1</p>
-                <p>elemento 2</p>
-                <p>elemento 3</p>
-                <p>elemento 4</p>
-                <p>elemento 5</p>
-                <p>elemento 6</p>
-                <p>elemento 7</p>
-                <p>elemento 8</p>
-                <p>elemento 9</p>
-                <p>elemento 10</p>
+            <div class="conteudo_construcoes_titulo_imagem">
+                <img src="./imagens/img.png" alt="img" title="img" class="imagem">
             </div>
         </div>
+        <!-- Melhorias -->
+        <div class="conteudo_melhorias_elementos">
+            <div class="conteudo_melhorias_titulo">
+                <div class="conteudo_construcoes_titulo_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_titulo_texto">
+                    <h2>Melhorias</h2>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 1</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 2</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 3</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 4</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 5</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 6</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 7</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 8</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 9</p>
+                </div>
+            </div>
+            <div class="conteudo_construcoes_elementos_elemento">
+                <div class="conteudo_construcoes_elementos_elemento_imagem">
+                    <img src="./imagens/img.png" alt="img" title="img"
+                    class="imagem">
+                </div>
+                <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <p>Elemento 10</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
