--- a/index.html
+++ b/index.html
@@ -10,231 +10,262 @@
 </head>
 
 <body>
-    <nav class="cabecalho_menu">
-        <a href="index.html"><button type="button" class="button">Home</button></a>
-        <a href="paginas/missoes.html"><button type="button" class="button">Missões</button></a>
-        <a href="paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
-        <a href="paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
-        <a href="paginas/opcoes.html"><button type="button" class="button">Opções</button></a>
-        <a href="paginas/creditos.html"><button type="button" class="button">Créditos</button></a>
-    </nav>
-    <div class="conteudo">
-        <!-- construçoes -->
-        <div class="conteudo_construcoes">
+
+    <!--INICIO DO MENU-->
+
+    <header>
+        <nav class="cabecalho_menu">
+            <a href="index.html"><button type="button" class="button">Home</button></a>
+            <a href="paginas/missoes.html"><button type="button" class="button">Missões</button></a>
+            <a href="paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
+            <a href="paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
+            <a href="paginas/opcoes.html"><button type="button" class="button">Opções</button></a>
+            <a href="paginas/creditos.html"><button type="button" class="button">Créditos</button></a>
+        </nav>
+    </header>
+
+    <!--FIM DO MENU-->
+
+    <main class="conteudo">
+
+        <!--SEÇÂO DE CONSTRUÇÔES-->
+
+        <section class="conteudo_construcoes">
+
+            <!--DIV TITULO-->
+
             <div class="conteudo_construcoes_titulo">
                 <div class="conteudo_construcoes_titulo_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                    <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_construcoes_titulo_texto">
                     <h2>Construções</h2>
                 </div>
             </div>
+
+            <!--INICIO DIV ELEMENTOS-->
+
             <div class="conteudo_construcoes_elementos">
 
+                <!--DIV ELEMENTO 1-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 1</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 2-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 2</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 3-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 3</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 4-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 4</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 5-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 5</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 6-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 6</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 7-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 7</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 8-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 8</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 9-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 9</p>
                     </div>
                 </div>
+                <!--DIV ELEMENTO 10-->
                 <div class="conteudo_construcoes_elementos_elemento">
                     <div class="conteudo_construcoes_elementos_elemento_imagem">
-                        <img src="./imagens/img.png" alt="img" title="img"
-                        class="imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_construcoes_elementos_elemento_texto">
                         <p>Elemento 10</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Elemento Principal -->
+
+            <!--FIM DIV ELEMENTOS-->
+
+        </section>
+
+        <!--SEÇÂO DO OBJETO PRINCIPAL-->
+
         <div class="conteudo_objPrincipal">
             <h1>Elemento Principal</h1>
             <div class="conteudo_construcoes_titulo_imagem">
                 <img src="./imagens/img.png" alt="img" title="img" class="imagem">
             </div>
         </div>
-        <!-- Melhorias -->
-        <div class="conteudo_melhorias_elementos">
+
+        <!-- SEÇÃO DE MELHORIAS -->
+
+        <section class="conteudo_melhorias">
+
+            <!--DIV TITULO-->
+
             <div class="conteudo_melhorias_titulo">
                 <div class="conteudo_construcoes_titulo_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
+                    <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_construcoes_titulo_texto">
                     <h2>Melhorias</h2>
                 </div>
             </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
+
+            <!--INICIO DIV ELEMENTOS-->
+
+            <div>
+                <!--DIV ELEMENTO 1-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 1</p>
+                    </div>
                 </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 1</p>
+                <!--DIV ELEMENTO 2-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 2</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 3-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 3</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 4-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 4</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 5-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 5</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 6-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 6</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 7-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 7</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 8-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 8</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 9-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 9</p>
+                    </div>
+                </div>
+                <!--DIV ELEMENTO 10-->
+                <div class="conteudo_construcoes_elementos_elemento">
+                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                        <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    </div>
+                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                        <p>Elemento 10</p>
+                    </div>
                 </div>
             </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 2</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 3</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 4</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 5</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 6</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 7</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 8</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 9</p>
-                </div>
-            </div>
-            <div class="conteudo_construcoes_elementos_elemento">
-                <div class="conteudo_construcoes_elementos_elemento_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img"
-                    class="imagem">
-                </div>
-                <div class="conteudo_construcoes_elementos_elemento_texto">
-                    <p>Elemento 10</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+
+            <!--FIM DIV ELEMENTOS-->
+            
+        </section>
+    </main>
 </body>
 
 </html>
