Ajustes na index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="index.html"><button type="button" class="button">Home</button></a>
             <a href="paginas/missoes.html"><button type="button" class="button">Missões</button></a>
             <a href="paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
+            <a href="paginas/biblioteca.html"><button type="button" class="button">Biblioteca</button></a>
             <a href="paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
             <a href="paginas/opcoes.html"><button type="button" class="button">Opções</button></a>
             <a href="paginas/creditos.html"><button type="button" class="button">Créditos</button></a>
@@ -28,112 +29,112 @@
 
     <main class="conteudo">
 
-        <!--SEÇÂO DE CONSTRUÇÔES-->
+        <!--SEÇÂO DE ENTIDADES-->
 
-        <section class="conteudo_construcoes">
+        <section class="conteudo_entidades">
 
             <!--DIV TITULO-->
 
-            <div class="conteudo_construcoes_titulo">
-                <div class="conteudo_construcoes_titulo_imagem">
+            <div class="conteudo_titulos">
+                <div class="conteudo_entidades_titulo_imagem">
                     <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
-                <div class="conteudo_construcoes_titulo_texto">
-                    <h2>Construções</h2>
+                <div class="conteudo_entidades_titulo_texto">
+                    <h2>Entidades</h2>
                 </div>
             </div>
 
             <!--INICIO DIV ELEMENTOS-->
 
-            <div class="conteudo_construcoes_elementos">
+            <div class="conteudo_entidades_elementos">
 
                 <!--DIV ELEMENTO 1-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 1</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 2</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 3</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 4</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 5</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 6</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 7</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 8</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 9</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_entidades_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_entidades_elementos_elemento_texto">
                         <p>Elemento 10</p>
                     </div>
                 </div>
@@ -147,123 +148,123 @@
 
         <div class="conteudo_objPrincipal">
             <h1>Elemento Principal</h1>
-            <div class="conteudo_construcoes_titulo_imagem">
+            <div class="conteudo_entidades_titulo_imagem">
                 <img src="./imagens/img.png" alt="img" title="img" class="imagem">
             </div>
         </div>
 
-        <!-- SEÇÃO DE MELHORIAS -->
+        <!-- SEÇÃO DE Artefatos -->
 
-        <section class="conteudo_melhorias">
+        <section class="conteudo_artefatos">
 
             <!--DIV TITULO-->
 
-            <div class="conteudo_melhorias_titulo">
-                <div class="conteudo_construcoes_titulo_imagem">
+            <div class="conteudo_titulos">
+                <div class="conteudo_titulos_artefatos_imagem">
                     <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
-                <div class="conteudo_construcoes_titulo_texto">
-                    <h2>Melhorias</h2>
+                <div class="conteudo_titulos_artefatos_texto">
+                    <h2>Artefatos</h2>
                 </div>
             </div>
 
             <!--INICIO DIV ELEMENTOS-->
 
-            <div>
+            <div class="conteudo_artefatos_elementos">
                 <!--DIV ELEMENTO 1-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 1</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 2</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 3</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 4</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 5</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 6</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 7</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 8</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 9</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
-                <div class="conteudo_construcoes_elementos_elemento">
-                    <div class="conteudo_construcoes_elementos_elemento_imagem">
+                <div class="conteudo_artefatos_elementos_elemento">
+                    <div class="conteudo_entidades_elementos_elemento_imagem">
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
-                    <div class="conteudo_construcoes_elementos_elemento_texto">
+                    <div class="conteudo_titulos_artefatos_texto">
                         <p>Elemento 10</p>
                     </div>
                 </div>
             </div>
 
             <!--FIM DIV ELEMENTOS-->
-            
+
         </section>
     </main>
 </body>
