Adicionado nomes das entidades

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 1</p>
+                        <p>Juk-Shabb</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
@@ -63,7 +63,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 2</p>
+                        <p>Ghizguth</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
@@ -72,7 +72,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 3</p>
+                        <p>Mordiggian</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
@@ -81,7 +81,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 4</p>
+                        <p>Hastur</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
@@ -90,7 +90,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 5</p>
+                        <p>Cthulhu</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
@@ -99,7 +99,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 6</p>
+                        <p>Ycnágnnisssz</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
@@ -108,7 +108,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 7</p>
+                        <p>Nyarlathotep</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
@@ -117,7 +117,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 8</p>
+                        <p>Shub-Niggurath</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
@@ -126,7 +126,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 9</p>
+                        <p>Yog-Sothoth</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
@@ -135,7 +135,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_entidades_elementos_elemento_texto">
-                        <p>Elemento 10</p>
+                        <p>Azathoth</p>
                     </div>
                 </div>
             </div>
