--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 1</p>
+                        <p>Yellow Sign</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 2-->
@@ -186,7 +186,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 2</p>
+                        <p>Hound Amulet</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 3-->
