Alterados os nomes dos elementos da index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="paginas/missoes.html"><button type="button" class="button">Missões</button></a>
             <a href="paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
             <a href="paginas/biblioteca.html"><button type="button" class="button">Biblioteca</button></a>
+            <a href="paginas/historia.html"><button type="button" class="button">História</button></a>
             <a href="paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
             <a href="paginas/opcoes.html"><button type="button" class="button">Opções</button></a>
             <a href="paginas/creditos.html"><button type="button" class="button">Créditos</button></a>
@@ -147,7 +148,7 @@
         <!--SEÇÂO DO OBJETO PRINCIPAL-->
 
         <div class="conteudo_objPrincipal">
-            <h1>Elemento Principal</h1>
+            <h1>Moeda Antiga</h1>
             <div class="conteudo_entidades_titulo_imagem">
                 <img src="./imagens/img.png" alt="img" title="img" class="imagem">
             </div>
@@ -195,7 +196,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 3</p>
+                        <p>Curse Whistle</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 4-->
@@ -204,7 +205,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 4</p>
+                        <p>Eltdown Shards</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 5-->
@@ -213,7 +214,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 5</p>
+                        <p>Elder Key</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 6-->
@@ -222,7 +223,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 6</p>
+                        <p>Lagh metal</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 7-->
@@ -231,7 +232,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 7</p>
+                        <p>Tulu-metal</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 8-->
@@ -240,7 +241,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 8</p>
+                        <p>Emma</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 9-->
@@ -249,7 +250,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 9</p>
+                        <p>De Marigny's Clock</p>
                     </div>
                 </div>
                 <!--DIV ELEMENTO 10-->
@@ -258,7 +259,7 @@
                         <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                     </div>
                     <div class="conteudo_titulos_artefatos_texto">
-                        <p>Elemento 10</p>
+                        <p>Shining Trapezohedron</p>
                     </div>
                 </div>
             </div>
