--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -17,7 +17,7 @@
         <nav class="cabecalho_menu">
             <a href="../index.html"><button type="button" class="button">Home</button></a>
             <a href="../paginas/missoes.html"><button type="button" class="button">Missões</button></a>
-            <a href="../paginas/prestigio.html"><button type="button" class="button">Prestígio</button></a>
+            <a href="../paginas/prestigio.html"><button type="button" class="button">Legado do Abismo</button></a>
             <a href="../paginas/biblioteca.html"><button type="button" class="button">Biblioteca</button></a>
             <a href="../paginas/historia.html"><button type="button" class="button">História</button></a>
             <a href="../paginas/estatisticas.html"><button type="button" class="button">Estatísticas</button></a>
