adicionado as historias na pagina de missoes

--- a/paginas/missoes.html
+++ b/paginas/missoes.html
@@ -35,19 +35,7 @@
                 <div class="missoes_imagem"><img src="../imagens/img.png" alt="img" title="img" class="imagem"></div>
                 <div class="missoes_texto_Botao">
                     <div class="missoes_texto">
-                        <p>Lorem ipsum dolor sit amet. Aut fuga sapiente quo delectus assumenda et nostrum repellat. Est
-                            corrupti rerum ex quas recusandae ut esse sint eos error eius aut illum consequatur et
-                            voluptatem eius ea magnam culpa. Et earum velit non corrupti assumenda eum officia eveniet
-                            aut incidunt quia qui atque blanditiis sit ipsa ducimus aut voluptatem deleniti.
-
-                            Qui quos commodi qui magnam dolorem est repellendus culpa. Et recusandae impedit non
-                            obcaecati omnis non possimus similique et facilis veniam. Et omnis odit qui beatae suscipit
-                            sit sunt dolorem aut eveniet sunt ut iure voluptates.
-
-                            Vel incidunt minus qui optio odio eum provident tempore rem fuga quae rem dolor obcaecati!
-                            Et facilis dolor aut reprehenderit omnis id eaque provident eos voluptatibus labore At odit
-                            magni aut facilis laudantium. Eos deleniti nemo aut dolorem quisquam hic saepe eveniet qui
-                            esse Quis et quia repellendus a consequatur ullam est quasi voluptas.</p>
+                        <p>Meu nome é Amelia Carter, sou uma arqueóloga apaixonada por desvendar os mistérios do passado. Durante uma escavação recente, encontrei uma moeda antiga que parecia estar conectada a uma civilização perdida. Ao estudar a moeda e suas inscrições, percebi que ela continha pistas sobre um tesouro lendário. No entanto, também descobri que essa moeda estava envolta em uma aura de perigo e misticismo. Decidi procurar a ajuda de um detetive habilidoso para me auxiliar na investigação, na esperança de desvendar os segredos ocultos por trás dessa moeda antiga.</p>
                     </div>
                     <div class="missoes_botao"><button class="botao">Concluir</button></div>
                 </div>
@@ -56,19 +44,7 @@
                 <div class="missoes_imagem"><img src="../imagens/img.png" alt="img" title="img" class="imagem"></div>
                 <div class="missoes_texto_Botao">
                     <div class="missoes_texto">
-                        <p>Lorem ipsum dolor sit amet. Aut fuga sapiente quo delectus assumenda et nostrum repellat. Est
-                            corrupti rerum ex quas recusandae ut esse sint eos error eius aut illum consequatur et
-                            voluptatem eius ea magnam culpa. Et earum velit non corrupti assumenda eum officia eveniet
-                            aut incidunt quia qui atque blanditiis sit ipsa ducimus aut voluptatem deleniti.
-
-                            Qui quos commodi qui magnam dolorem est repellendus culpa. Et recusandae impedit non
-                            obcaecati omnis non possimus similique et facilis veniam. Et omnis odit qui beatae suscipit
-                            sit sunt dolorem aut eveniet sunt ut iure voluptates.
-
-                            Vel incidunt minus qui optio odio eum provident tempore rem fuga quae rem dolor obcaecati!
-                            Et facilis dolor aut reprehenderit omnis id eaque provident eos voluptatibus labore At odit
-                            magni aut facilis laudantium. Eos deleniti nemo aut dolorem quisquam hic saepe eveniet qui
-                            esse Quis et quia repellendus a consequatur ullam est quasi voluptas.</p>
+                        <p>Meu nome é Henry Thompson, um bibliotecário idoso e apaixonado por conhecimento. Durante minhas pesquisas, deparei-me com um livro misterioso que despertou meu interesse. Ao examiná-lo, percebi que ele estava ligado a uma série de eventos estranhos ao longo da história. Intrigado, comecei a investigar a origem e o significado desse livro. Logo descobri que ele estava relacionado a uma lenda sombria e misteriosa. Decidi compartilhar minhas descobertas com um detetive experiente, na esperança de que juntos possamos desvendar os segredos ocultos por trás desse livro misterioso.</p>
                     </div>
                     <div class="missoes_botao"><button class="botao">Concluir</button></div>
                 </div>
@@ -77,19 +53,9 @@
                 <div class="missoes_imagem"><img src="../imagens/img.png" alt="img" title="img" class="imagem"></div>
                 <div class="missoes_texto_Botao">
                     <div class="missoes_texto">
-                        <p>Lorem ipsum dolor sit amet. Aut fuga sapiente quo delectus assumenda et nostrum repellat. Est
-                            corrupti rerum ex quas recusandae ut esse sint eos error eius aut illum consequatur et
-                            voluptatem eius ea magnam culpa. Et earum velit non corrupti assumenda eum officia eveniet
-                            aut incidunt quia qui atque blanditiis sit ipsa ducimus aut voluptatem deleniti.
-
-                            Qui quos commodi qui magnam dolorem est repellendus culpa. Et recusandae impedit non
-                            obcaecati omnis non possimus similique et facilis veniam. Et omnis odit qui beatae suscipit
-                            sit sunt dolorem aut eveniet sunt ut iure voluptates.
-
-                            Vel incidunt minus qui optio odio eum provident tempore rem fuga quae rem dolor obcaecati!
-                            Et facilis dolor aut reprehenderit omnis id eaque provident eos voluptatibus labore At odit
-                            magni aut facilis laudantium. Eos deleniti nemo aut dolorem quisquam hic saepe eveniet qui
-                            esse Quis et quia repellendus a consequatur ullam est quasi voluptas.   </p>
+                        <p>Meu nome é Samuel Grant e sou um faroleiro solitário. Há anos, fui designado para trabalhar em um farol isolado em uma pequena ilha remota. A solidão e a imensidão do oceano sempre me fascinaram, mas ultimamente tenho sido assombrado por visões perturbadoras e sons estranhos vindos das profundezas.
+                            Noites sem fim são preenchidas com murmúrios ininteligíveis e sussurros que parecem ecoar do próprio abismo. As águas escuras e revoltas parecem esconder algo antigo e maligno, algo que desperta de seu sono profundo.
+                            Cada vez mais atormentado por essas visões, decidi solicitar ajuda. Enviei uma mensagem desesperada a um investigador especializado em casos sobrenaturais, o detetive Michael Sullivan. Eu sabia que ele era a única esperança de desvendar o mistério que assolava minha mente e minha alma.</p>
                     </div>
                     <div class="missoes_botao"><button class="botao">Concluir</button></div>
                 </div>
