Adicionado evento click no objeto principal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <script type="text/javascript" src="./js/scripts.js"></script>
     <title>Jogo</title>
 </head>
 
@@ -149,7 +150,8 @@
 
         <div class="conteudo_objPrincipal">
             <h1>Moeda Antiga</h1>
-            <div class="conteudo_entidades_titulo_imagem">
+            <h2 id="moeda"></h2>
+            <div class="conteudo_entidades_titulo_imagem" id="moeda_antiga">
                 <img src="./imagens/img.png" alt="img" title="img" class="imagem">
             </div>
         </div>
@@ -161,7 +163,7 @@
             <!--DIV TITULO-->
 
             <div class="conteudo_titulos">
-                <div class="conteudo_titulos_artefatos_imagem">
+                <div class="conteudo_titulos_artefatos_imagem" id="moeda_antiga" onclick="clickar">
                     <img src="./imagens/img.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_titulos_artefatos_texto">
