--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="conteudo_titulos">
                 <div class="conteudo_entidades_titulo_imagem">
-                    <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+                    <img src="./imagens/entidades.png" alt="img" title="img" class="imagem">
                 </div>
                 <div class="conteudo_entidades_titulo_texto">
                     <h2>Entidades</h2>
@@ -151,8 +151,8 @@
         <div class="conteudo_objPrincipal">
             <h1>Moeda Antiga</h1>
             <h2 id="moeda"></h2>
-            <div class="conteudo_entidades_titulo_imagem" id="moeda_antiga">
-                <img src="./imagens/img.png" alt="img" title="img" class="imagem">
+            <div class="conteudo_moeda_titulo_imagem" id="moeda_antiga">
+                <img src="./imagens/moedaAntiga.png" alt="img" title="img" class="imagem_moeda">
             </div>
         </div>
 
